# crypto_insights

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  streamlit_app.py
data/: events.example.yaml  labels.example.yaml  viability_report.md  watchlist.example.yaml
docs/brainstorms/: 2026-05-09-crypto-tracker-brainstorm.md
docs/decisions/: 0001-two-layer-signal-model.md  0002-stack-tecnico.md  0003-unlocks-hard-constraint.md  0004-consolidation-breakout-spec.md  0005-gap-policy.md  0006-state-machine-transitions.md
docs/feedback/: README.md  TEMPLATE.md
docs/feedback/open-questions/: 2026-05-10-q1-eth-top-holders.md  2026-05-10-q10-complete-watchlist.md  2026-05-10-q11-defillama-unlocks-access.md  2026-05-10-q12-gap-policy.md  2026-05-10-q13-state-machine-transitions.md  2026-05-10-q2-mindshare.md  2026-05-10-q3-netflows.md  2026-05-10-q4-q9-summary.md  README.md
docs/learnings/: README.md  signal-performance.md
docs/plans/: 2026-05-10-feat-crypto-position-manager-mvp-plan.md
migrations/: 0001-initial-schema.rollback.sql  0001-initial-schema.sql  0002-ohlcv-history-and-holders.rollback.sql  0002-ohlcv-history-and-holders.sql
src/crypto_insights/: __init__.py  archetypes.py  cli.py  config.py  db.py  logging_config.py  models.py  watchlist.py
src/crypto_insights/connectors/: __init__.py  base.py  binance.py  defillama.py  events_manual.py  github.py  helius.py  hyperliquid.py  moralis.py
src/crypto_insights/dashboard/: __init__.py  api.py
src/crypto_insights/fusion/: __init__.py  archetype_rules.py  layer1.py  layer2.py
src/crypto_insights/pipeline/: __init__.py  backfill.py  batch.py  derived.py  persist.py  validate.py
src/crypto_insights/signals/: __init__.py  consolidation_breakout.py  funding.py  indicators.py  smart_money.py  unlocks.py
tests/: conftest.py
tests/fixtures/: binance_hype_klines.json  helius_token_accounts.json  moralis_owners.json
tests/unit/: test_backfill.py  test_events_manual.py  test_indicators.py  test_pipeline_persist.py  test_smart_money.py  test_unlocks_layer2.py  test_watchlist.py
tests/unit/connectors/: test_binance.py  test_helius.py  test_moralis.py
