[project]
name = "crypto-insights"
version = "0.1.0"
description = "Crypto position manager para 30 proyectos curados — pipeline batch diario + dashboard Streamlit local"
authors = [{ name = "Victor Lavado" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx[http2]>=0.27.0",
    "aiolimiter>=1.1.0",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "typer>=0.12.0",
    "yoyo-migrations>=9.0.0",
    "sqlalchemy>=2.0.32",
    "rich>=13.7.0",
]

[project.scripts]
crypto-insights = "crypto_insights.cli:main"
crypto-ui = "crypto_insights.cli:ui"

[project.urls]
Homepage = "https://github.com/victor-lavado/crypto-insights"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_insights"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "hypothesis>=6.112.0",
    "freezegun>=1.5.1",
]
ui = [
    "streamlit>=1.38.0",
]
types = [
    "pandas-stubs>=2.2.0",
    "types-pyyaml>=6.0.12",
]

[tool.uv]
default-groups = ["dev", "test", "ui"]

# ============================================================================
# Ruff (linter + formatter)
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "W",       # pycodestyle warnings
    "I",       # isort
    "B",       # flake8-bugbear (mutable defaults, etc)
    "ANN",     # flake8-annotations (require type hints)
    "ASYNC",   # async-specific antipatterns
    "PIE",     # misc improvements
    "RET",     # return statement issues
    "SIM",     # simplifications
    "UP",      # pyupgrade
    "C4",      # comprehensions
    "PTH",     # pathlib over os.path
]
ignore = [
    "ANN401",  # Any allowed when justified
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"streamlit_app.py" = ["ANN401"]
"tests/**/*" = ["ANN", "S101"]
"src/crypto_insights/cli.py" = ["UP007"]  # typer needs Optional[X] not X | None
"migrations/**/*.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================================
# Mypy (strict in connectors/, signals/, pipeline/; lighter elsewhere)
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_decorators = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "crypto_insights.connectors.*",
    "crypto_insights.signals.*",
    "crypto_insights.pipeline.*",
]
strict = true

[[tool.mypy.overrides]]
module = "streamlit_app"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["aiolimiter.*", "yoyo.*", "structlog.*"]
ignore_missing_imports = true

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that hit recorded fixtures (no live network)",
    "slow: tests that take >1s",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:yoyo.*",
]

# ============================================================================
# Coverage
# ============================================================================
[tool.coverage.run]
source = ["src/crypto_insights"]
branch = true
omit = ["*/cli.py", "*/__init__.py"]

[tool.coverage.report]
precision = 1
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
